# applab

./: .gitignore  .shellcheckrc  LICENSE  pyproject.toml  sha  sha.bash  sha_common.bash  shab  shab.bash
.trae/rules/: project_rules.md
docs/: Dev.md  README.md  dev-core.md  dev.md
examples/hello/: main.py
jupyter/: x.ipynb  y.ipynb
notebooks/: y.ipynb
pkgs/apphub/: pyproject.toml
pkgs/apphub/examples/hello/: main.py
pkgs/apphub/src/: __init__.py  core.py
pkgs/apphub/src/apphub/: __init__.py
pkgs/apphub/src/apphub/cli/: __init__.py  app.py  provider.py
pkgs/apphub/src/apphub/provider/tencentcloud/: __init__.py
pkgs/applab/: pyproject.toml  sha.bash
pkgs/applab-cli/: pyproject.toml
pkgs/applab-cli/src/applab/cli/: __init__.py  _account.py  _cli.py  _cmd_account.py  _common.py  _console.py  main.py  vendor.py
pkgs/applab-cli/tests/: asserts.py  conftest.py  test_cli_account.py  test_cmd_account.py  test_password_store.py
pkgs/applab-core/: README.md  pyproject.toml  sha.bash
pkgs/applab-core/src/applab/core/: __init__.py  _account.py  _arg_model.py  _auth.py  _base.py  _constant.py  _param_model.py  _storage.py  error.py  storage.py
pkgs/applab-provider-qcloud/: pyproject.toml
pkgs/applab-provider-qcloud/src/applab/provider/qcloud/: __init__.py  provider.py
pkgs/applab-vendor-tencentcloud/: pyproject.toml
pkgs/applab-vendor-tencentcloud/tests/: test_account.py
pkgs/applab/examples/hello/: main.py
pkgs/applab/src/applab/_cli/: __init__.py  main.py  provider.py
pkgs/applab/src/applab/provider/: __init__.py  base.py
pkgs/applab/tests/: test_password_store.py
pkgs/planc/: pyproject.toml  sha
pkgs/planc/src/planc/: __init__.py  _common.py  _dag.py  core_chatgpt.py  core_doubao.py  core_tongyi.py
pkgs/planc/tests/planc/: test_dag.py  test_topo_sort.py  test_topological_sort_dfs.py
planc/core/: README.md  pyproject.toml
planc/core/src/planc/core/: __init__.py
planc/core/src/planc_core/: __init__.py
planc/src/planc/: __init__.py
planc/tests/planc/: test_planc.py
research/: pyproject.toml
research/build.nvidia.com_mit/: boltz2.py
scripts/: sha_common.bash  sha_ext.bash  sha_ext_python.bash  sha_ext_uv.bash
src/appc/: __init__.py
src/applab/: README.md
src/planc/: __init__.py
src/qpa/: __init__.py  core.py  main.py
test_import/: main.py  pyproject.toml
tests/: temp.py  test_lib.py
tool/: sha_common.bash
tools/: sha_all_project_commands.bash  sha_common.bash
