[project]
name = "qpa"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "keyring>=25.7.0",
    "pytest>=9.0.1",
]
# test = [{"include-group"="dev"}]


# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125 
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12

# uv config set publish.repositories.testpypi.url "https://test.pypi.org/legacy/"
# # 配置凭据（避免每次输入，Mac 下安全存储）
# uv config set publish.repositories.testpypi.username "__token__"
# uv config set publish.repositories.testpypi.password "你的 TestPyPI Token"
