[project]
name = "qpa"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chen Peng" }
]

requires-python = ">=3.12"
dependencies = []
license = { text = "MIT" }


[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"


#################################################################################
# 配置依赖组（Dependency Groups）
# - 开发者（Developer） 工具依赖（测试、Linting、文档）。
# - 不会包含在发布的包元数据中。它只在本地开发时使用。
# - 相对较新（PEP 735），支持工具（如 uv、Poetry 的部分功能）正在普及。
#################################################################################
[dependency-groups]
dev = [
    "keyring>=25.7.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

#################################################################################
# 可选依赖（Optional Dependencies）
# 终端用户（End-User） 可选功能依赖。
# 会 包含在发布的包元数据中（例如 .whl 文件），用户可通过 pip install package[extra] 安装。
#################################################################################
[project.optional-dependencies]


# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125 
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12

# uv config set publish.repositories.testpypi.url "https://test.pypi.org/legacy/"
# # 配置凭据（避免每次输入，Mac 下安全存储）
# uv config set publish.repositories.testpypi.username "__token__"
# uv config set publish.repositories.testpypi.password "你的 TestPyPI Token"




# --- Ruff 配置 ---
[tool.ruff]
# 告诉 Ruff 你的 Python 源代码在哪里
src = ["src"] 
# 排除的文件或目录
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

# 最大行长度
line-length = 120

[tool.ruff.lint]
# C901: 忽略函数复杂度检查
ignore = ["E501", "W293"]  
# I: isort (导入排序), F: Pyflakes, E: Error (pycodestyle), B: Bugbear
select = ["E", "W", "F"]   
