[project]
name = "applab-root"
version = "0.0.1dev20251226222400"
# dynamic = ["version"] # todo 后面用 dynamic 替换掉 version 字段
license = { text = "MIT" }

description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chen Peng" }]
urls = { "homepage" = "https://github.com/chen56/applab" }

requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
# uv_build默认就使用 src/ 布局，不需要额外配置
build-backend = "uv_build"

#################################################################################
# 配置依赖组（Dependency Groups）
# - 开发者（Developer） 工具依赖（测试、Linting、文档）。
# - 不会包含在发布的包元数据中。它只在本地开发时使用。
# - 相对较新（PEP 735），支持工具（如 uv、Poetry 的部分功能）正在普及。
#################################################################################
[dependency-groups]
dev = [
   "keyring>=25.7.0",
   "pytest>=9.0.1",
   "ruff>=0.14.8",
   "pyright>=1.1.407",
]

#################################################################################
# 可以让uv把import的包变为可编辑状态，即uv.lock： source = { editable = "planc" }
# 类似此效果：uv pip install -e . # 确保src目录被安装为可编辑模式，让import正常工作，避免使用PYTHONPATH
#################################################################################
[tool.uv.sources]
# 类似 my-package = { path = "../", editable = true }
planc = { workspace = true } # mono子项目导航关键配置，需重启vscode
applab = { workspace = true } # mono子项目导航关键配置，需重启vscode

#################################################################################
# 可选依赖（Optional Dependencies）
# 终端用户（End-User） 可选功能依赖。
# 会 包含在发布的包元数据中（例如 .whl 文件），用户可通过 pip install package[xxx] 安装。
#################################################################################
# [project.optional-dependencies]
# dev = [
#     "pandas>=2.0.0", # uv 可能会添加版本约束 puff
# ]
# test = ["matplotlib>=3.7.0"]

#################################################################################
# --- uv 配置 ---
#################################################################################
[tool.uv.workspace]
members = [
    "pkgs/*",
    "research",
]

[tool.uv]
# workspace 根“仅作为管理层/脚本层”，明确关闭它作为包的构建行为
package = false

# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12
# pyproject.toml config ref: https://docs.astral.sh/uv/reference/settings/#python-install-mirror
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"


#################################################################################
# --- Ruff 配置（更新为 NumPy 风格） ---
#################################################################################

[tool.ruff]
src = ["src"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in public nested class
    "D205", # 1 blank line required after summary line
    "D401", # First line should be imperative
    "E501", # Line too long
    "W293", # Blank line contains whitespace
]

select = [
    "E",  # pycodestyle Errors
    "W",  # pycodestyle Warnings
    "F",  # Pyflakes
    "B",  # Bugbear
]
extend-select = [
    "UP", # pyupgrade
    "D",  # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/**" = [
    "D102", # Missing docstring in a public method
    "D106", # Missing docstring in a public nested class
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # 使用 NumPy 风格的 docstring 约定

#################################################################################
# pyright
#################################################################################
[tool.pyright]
include = [
    "src",
    "tests",
    "pkgs/*/src",   # Mono 子项目
    "pkgs/*/tests",
]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12" # 根环境默认用最新版本，兼容多平台特性

# 根环境默认平台（可任选，子环境覆盖），不配置按照当前运行平台
# 目前pyright无法配置检查多个平台，可用用uv run pyright --pythonplatform Darwin 参数多次检查
# pythonPlatform = "Darwin"

# 可用executionEnvironments 对特定目录指定特定平台
